finishing html on cafes page

--- a/cafes.html
+++ b/cafes.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Your Name">
-    <meta name="description" content="CafeFinderNL — find the best cafes in the Netherlands.">
-    <meta name="keywords" content="cafe, coffee, netherlands, Haarlem, Amsterdam">
+    <meta name="description" content="Discover the most loved cafes in Haarlem — from hidden gems to popular local favorites.">
+    <meta name="keywords" content="cafe, coffee, netherlands, Haarlem">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Finder</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="" href="">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <header>
         <figure>
-            <img src="" alt="">
+            <img src="Logo.png" alt="Logo">
             <figcaption>
-                CafeFinderNL
+                HaarlemCafes
             </figcaption>
         </figure>
 
@@ -27,5 +28,57 @@
             </ul>
         </nav>
     </header>
+
+    <section class="hero">
+        <article>
+            <img src="haarlembanner.png" alt="Haarlem City" class="hero-img">
+            <h1>List of cafes sorted by price</h1>
+            <h1>Here you can find all Best Cafes in Haarlem</h1>
+            <a href="#cafes-section" class="explore-btn">Explore</a>
+        </article>
+    </section>
+
+    <section id="cafes-section" class="cafes">
+            <header>
+                <h1>Top Cafes in Haarlem</h1>
+                <p>Discover the most loved cafes in Haarlem — from hidden gems to popular local favorites. Each place was carefully selected for its cozy atmosphere, great coffee, and welcoming vibe.</p>
+                <p>Whether you're looking for a quiet spot to study, a brunch place with friends, or just the perfect cappuccino, this list will help you find your new favorite cafe in the heart of Haarlem.</p>
+            </header>
+            
+            <article>
+                <figure>
+                    <img src="native.png" alt="Native Haarlem - Koffie">
+                </figure>
+                <figcaption>Native Haarlem - Koffie</figcaption>
+                <p><strong>About:</strong> A cozy specialty coffee bar filled with plants and vintage furniture, located in the heart of Haarlem.</p>
+                <p><strong>Address:</strong> Breestraat 23, 2011 ZX Haarlem</p>
+            </article>
+
+            <article>
+                <figure>
+                    <img src="mogador.png" alt="Mogador Café">
+                </figure>
+                <figcaption>Mogador Café</figcaption>
+                <p><strong>About:</strong> One of Haarlem's classic cafes with a warm, homely atmosphere.</p>
+                <p><strong>Address:</strong> Gasthuisstraat 48, 2011 XP Haarlem</p>
+            </article>
+
+            <article>
+                <figure>
+                    <img src="blend.png" alt="Blend Haarlem">
+                </figure>
+                <figcaption>Blend Haarlem</figcaption>
+                <p><strong>About:</strong> A bright, modern cafe serving all-day breakfast, lunch, and fresh smoothies.</p>
+                <p><strong>Address:</strong> Kleine Houtstraat 139, Haarlem</p>
+            </article>
+    </section>
+
+    <aside class="tip">
+        <p><em>Tip:</em> More Haarlem cafes coming soon — stay tuned for weekly updates!</p>
+    </aside>
+
+    <footer>
+        <p>© 2025 CafeFinderNL — Helping you find the best cafes in the Netherlands.</p>
+    </footer>
 </body>
 </html>
