--- a/home.html
+++ b/home.html
@@ -2,26 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Maksym Kolisnychenko">
+    <meta name="description" content="Find the best cafés and restaurants in Haarlem — reliable reviews, vegan options, and budget-friendly places.">
+    <meta name="keywords" content="Haarlem cafes, restaurants, coffee, vegan cafes, best cafes in Haarlem, Netherlands">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Finder</title>
+
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/png" href="images/Logo.png">
 </head>
 <body>
-    <header>
-        <figure>
-            <img src="Logo.png" alt="Logo">
-            <figcaption>
-                HaarlemCafes
-            </figcaption>
+    <header class="menu">
+        <figure class="logo">
+            <a href="home.html">
+                <img src="images/Logo.png" alt="Logo" id="logo-img">
+                <figcaption>
+                    HaarlemCafes
+                </figcaption>
+            </a>
         </figure>
 
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
                 <li><a href="cafes.html">Cafes</a></li>
-                <li><a href="reviews.html">Review</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
+
+    
 </body>
 </html>
