finished home page, small changes for cafes page

--- a/cafes.html
+++ b/cafes.html
@@ -14,7 +14,7 @@
     <header class="menu">
         <figure class="logo">
             <a href="home.html">
-                <img src="images/Logo.png" alt="Logo" id="logo-img">
+                <img src="images/Logo.png" alt="Logo" title="logo" id="logo-img">
                 <figcaption>
                     HaarlemCafes
                 </figcaption>
@@ -32,7 +32,9 @@
 
     <section class="hero">
         <article>
-            <img src="images/haarlembanner.png" alt="Haarlem City" class="hero-img">
+            <figure>
+                <img src="images/haarlembanner.png" alt="Haarlem City" title="Haarlem city" class="hero-img">
+            </figure>
             <header class="hero-content">
                 <h1>List of cafes sorted by price</h1>
                 <h2>Here you can find all Best Cafes in Haarlem</h2>
@@ -50,7 +52,7 @@
         
             <article class="cafe-card">
                 <figure class="cafe-image">
-                    <img src="images/native.png" alt="Native Haarlem - Koffie">
+                    <img src="images/native.png" alt="Native Haarlem - Koffie" title="Native Haarlem - Koffie">
                 </figure>
                 <section class="cafe-info">
                     <h2>Native Haarlem - Koffie</h2>
@@ -64,7 +66,7 @@
 
             <article class="cafe-card">
                 <figure class="cafe-image">
-                    <img src="images/mogador.png" alt="Mogador Café">
+                    <img src="images/mogador.png" alt="Mogador Café" title="Mogador Café">
                 </figure>
                 <section class="cafe-info">
                     <h2>Mogador Café</h2>
@@ -78,7 +80,7 @@
 
             <article class="cafe-card">
                 <figure class="cafe-image">
-                    <img src="images/blend.png" alt="Blend Haarlem">
+                    <img src="images/blend.png" alt="Blend Haarlem" title="Blend Haarlem">
                 </figure>
                 <section class="cafe-info">
                     <h2>Blend Haarlem</h2>
@@ -97,7 +99,7 @@
 
     <footer>
         <p class="footer-text">
-            © 2025 CafeFinder NL — Helping you find the best budget cafes in the Netherlands.
+            &copy; 2025 CafeFinder NL — Helping you find the best budget cafes in the Netherlands.
         </p>
 
         <section class="footer-links">
@@ -107,10 +109,10 @@
 
         <section class="footer-socials">
             <a href="https://www.instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="Instagram">
+                <img src="images/instagram.png" alt="Instagram" title="instagram">
             </a>
             <a href="https://www.facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="Facebook">
+                <img src="images/facebook.png" alt="Facebook" title="facebook">
             </a>
         </section>
     </footer>
