--- a/home.html
+++ b/home.html
@@ -8,14 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Finder</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="icon" type="image/png" href="images/Logo.png">
 </head>
 <body>
     <header class="menu">
         <figure class="logo">
             <a href="home.html">
-                <img src="images/Logo.png" alt="Logo" id="logo-img">
+                <img src="images/Logo.png" alt="Logo" title="logo" id="logo-img">
                 <figcaption>
                     HaarlemCafes
                 </figcaption>
@@ -31,6 +31,87 @@
         </nav>
     </header>
 
-    
+    <section class="hero-home">
+        <figure>
+            <img src="images/homebanner.png" alt="Coffee cup in cafe" title="Haarlem cafes" class="hero-home-img">
+        </figure>
+
+        <header class="hero-home-content">
+            <h1>
+                Find the Best Cafes &amp; Restaurants
+                <span class="break">in Haarlem</span>
+            </h1>
+            <p>
+                Reliable reviews and budget-friendly choices
+                <span class="break">for tourists, students, and vegans.</span>
+            </p>
+            <a href="cafes.html" class="hero-btn">See Cafes</a>
+        </header>
+    </section>
+
+
+    <section class="about-section">
+        <header>
+            <h2>About us</h2>
+        </header>
+
+        <article>
+            <p>
+                At CafeScout Haarlem, we make it simple to explore the best cafes and restaurants across the city
+                — from quiet corners for study sessions to lively brunch spots.
+            </p>
+            <p>
+                Our platform highlights both local favorites and hidden gems, including vegan and vegetarian options,
+                with details on each café's menu, atmosphere, and opening hours.
+            </p>
+        </article>
+    </section>
+
+
+    <section class="info-split">
+        <article class="info-text">
+            <p>
+                You can read reviews, share your own experiences, and even save your favorite spots for later.
+                Whether you're visiting Haarlem or a local searching for a new coffee ritual, we help you find
+                places that fit your mood, taste, and budget.
+            </p>
+        </article>
+
+        <figure class="info-image">
+            <img src="/images/patisserie.png" alt="Haarlem patisserie" title="Popular cafe in Haarlem">
+        </figure>
+    </section>
+
+
+    <section class="closing-text">
+        <article>
+            <p>
+                HaarlemCafes brings together comfort, community, and good coffee —  
+                so every cup feels like home.
+            </p>
+
+            <a href="contact.html" class="contact-btn">Contact us</a>
+        </article>
+    </section>
+
+    <footer>
+        <p class="footer-text">
+            &copy; 2025 CafeFinder NL — Helping you find the best budget cafes in the Netherlands.
+        </p>
+
+        <section class="footer-links">
+            <a href="contact.html">Contact Us</a>
+            <a href="privacy.html">Privacy Policy</a>
+        </section>
+
+        <section class="footer-socials">
+            <a href="https://www.instagram.com" target="_blank">
+                <img src="images/instagram.png" alt="Instagram">
+            </a>
+            <a href="https://www.facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="Facebook">
+            </a>
+        </section>
+    </footer>
 </body>
 </html>
