finished contact page

--- a/cafes.html
+++ b/cafes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Maksym Kolisnychenko">
-    <meta name="description" content="Discover the most loved cafes in Haarlem — from hidden gems to popular local favorites.">
+    <meta name="description" content="Discover the most loved cafes in Haarlem - from hidden gems to popular local favorites.">
     <meta name="keywords" content="cafe, coffee, netherlands, Haarlem">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Finder</title>
@@ -24,7 +24,7 @@
         <nav>
             <ul>
                 <li><a href="home.html">Home</a></li>
-                <li><a href="cafes.html">Cafes</a></li>
+                <li><a href="cafes.html" class="active">Cafes</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -60,7 +60,7 @@
                     They are known for their homemade pastries and freshly roasted beans from local suppliers.
                     </p>
                     <p><strong>Address:</strong> Breestraat 23, 2011 ZX Haarlem</p>
-                    <a href="details.html" class="details-btn">View Details</a>
+                    <a href="https://www.nativehaarlem.nl/" class="details-btn">View Details</a>
                 </section>
             </article>
 
@@ -74,7 +74,7 @@
                     Visitors often praise its relaxing environment and friendly staff, making it a popular place to spend a calm afternoon.
                     </p>
                     <p><strong>Address:</strong> Gasthuisstraat 48, 2011 XP Haarlem</p>
-                    <a href="details.html" class="details-btn">View Details</a>
+                    <a href="https://mogadorcafe.nl/" class="details-btn">View Details</a>
                 </section>
             </article>
 
@@ -88,18 +88,18 @@
                     Their menu includes vegan and gluten-free options, which makes it a great choice for everyone.
                     </p>
                     <p><strong>Address:</strong> Kleine Houtstraat 139, Haarlem</p>
-                    <a href="details.html" class="details-btn">View Details</a>
+                    <a href="https://www.blendhaarlem.nl/nl" class="details-btn">View Details</a>
                 </section>
             </article>
     </section>
 
     <aside class="tip">
-        <p><em>Tip:</em> More Haarlem cafes coming soon — stay tuned for weekly updates!</p>
+        <p><em>Tip:</em> More Haarlem cafes coming soon - stay tuned for weekly updates!</p>
     </aside>
 
     <footer>
         <p class="footer-text">
-            &copy; 2025 CafeFinder NL — Helping you find the best budget cafes in the Netherlands.
+            &copy; 2025 CafeFinder NL - Helping you find the best budget cafes in the Netherlands.
         </p>
 
         <section class="footer-links">
