--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Maksym Kolisnychenko">
-    <meta name="description" content="Find the best cafés and restaurants in Haarlem — reliable reviews, vegan options, and budget-friendly places.">
+    <meta name="description" content="Find the best cafés and restaurants in Haarlem - reliable reviews, vegan options, and budget-friendly places.">
     <meta name="keywords" content="Haarlem cafes, restaurants, coffee, vegan cafes, best cafes in Haarlem, Netherlands">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafe Finder</title>
@@ -24,7 +24,7 @@
 
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="home.html" class="active">Home</a></li>
                 <li><a href="cafes.html">Cafes</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -61,8 +61,8 @@
                 — from quiet corners for study sessions to lively brunch spots.
             </p>
             <p>
-                Our platform highlights both local favorites and hidden gems, including vegan and vegetarian options,
-                with details on each café's menu, atmosphere, and opening hours.
+                Our platform highlights both local favorites and hidden gems, including <em>vegan</em> and <em>vegetarian</em> options,
+                with details on each cafe's menu, atmosphere, and opening hours.
             </p>
         </article>
     </section>
@@ -113,5 +113,10 @@
             </a>
         </section>
     </footer>
+
+    <aside id="cookies">
+    <p>This website uses cookies to improve user experience.</p>
+    <a href="#" class="accept">Accept</a>
+</aside>
 </body>
 </html>
